--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>MyProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
